fix: corrects spacing between paragraphs

--- a/src/css/component.markdown.css
+++ b/src/css/component.markdown.css
@@ -1,6 +1,6 @@
 .markdown {
   & * + * {
-    @apply mt-6;
+    @apply mt-5;
   }
 
   & h1 {
